test/integration/bad/tuples/stanc.expected
  $ ../../../../../install/default/bin/stanc array_literal_mismatch.stan
Semantic error in 'array_literal_mismatch.stan', line 2, column 43 to column 52:
   -------------------------------------------------
     1:  transformed data {
     2:    array[2] tuple(real, real) x = {(1, 2) , (3, 4, 5)};
                                                    ^
     3:  }
   -------------------------------------------------

Array expression must have entries of consistent type. Expected tuple(
int, int) but found tuple(int, int, int).
  $ ../../../../../install/default/bin/stanc bad_addition.stan
Semantic error in 'bad_addition.stan', line 3, column 2 to column 9:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, real) z;
     3:    z += 1;
           ^
     4:  }
   -------------------------------------------------

Ill-typed arguments supplied to assignment operator +=: lhs has type tuple(
real, real) and rhs has type int.
Available signatures for given lhs:
No matching signatures
  $ ../../../../../install/default/bin/stanc empty_tuple_expr.stan
Syntax error in 'empty_tuple_expr.stan', line 2, column 25 to column 26, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, real) y = ();
                                  ^
     3:  }
   -------------------------------------------------

Expression or comma separated list of expressions followed by ")" expected after "(".
  $ ../../../../../install/default/bin/stanc empty_tuple_type.stan
Syntax error in 'empty_tuple_type.stan', line 2, column 8 to column 9, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple() y = ();
                 ^
     3:  }
   -------------------------------------------------

Incomplete type declaration. Expected comma separated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc incomplete1.stan
Syntax error in 'incomplete1.stan', line 2, column 30 to column 35, parsing error:
   -------------------------------------------------
     1:  data {
     2:    tuple( array [ foo ] real , while
                                       ^
   -------------------------------------------------

Incomplete type specification, expected further types followed by ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete2.stan
Syntax error in 'incomplete2.stan', line 1, column 33 to column 36, parsing error:
   -------------------------------------------------
     1:  data { tuple( array [ foo ] real foo
                                          ^
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete3.stan
Syntax error in 'incomplete3.stan', line 2, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  model { tuple( complex , complex ) while
         ^
   -------------------------------------------------

Expected a new identifier after comma in declaration.
All variables declared must be of the same type, and any initializing assignment must follow the identifier before the next comma.
  $ ../../../../../install/default/bin/stanc incomplete4.stan
Syntax error in 'incomplete4.stan', line 2, column 45 to column 50, parsing error:
   -------------------------------------------------
     1:  data {
     2:      tuple( real , tuple( complex , complex ) while
                                                      ^
   -------------------------------------------------

Incomplete type specification. Expected either ")" or "," followed by
further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete5.stan
Syntax error in 'incomplete5.stan', line 1, column 14 to column 19, parsing error:
   -------------------------------------------------
     1:  data { tuple( while
                       ^
   -------------------------------------------------

Incomplete type declaration. Expected comma separated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc incomplete6.stan
Syntax error in 'incomplete6.stan', line 2, column 30 to column 31, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, int) x = (3.5, 4;
                                       ^
   -------------------------------------------------

Ill-formed phrase. Found an expression. This can be followed by a ",", a "}", a ")", a "]", a "[" or an infix or postfix operator.
  $ ../../../../../install/default/bin/stanc incomplete7.stan
Syntax error in 'incomplete7.stan', line 2, column 20 to column 21, parsing error:
   -------------------------------------------------
     1:  functions {
     2:     tuple(real, int, ) foo()
                             ^
     3:  }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple return type.
  $ ../../../../../install/default/bin/stanc onepl_expr_missing_comma.stan
Semantic error in 'onepl_expr_missing_comma.stan', line 2, column 2 to column 23:
   -------------------------------------------------
     1:  model {
     2:    tuple(real,) y = (1);
           ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to assignment operator =: lhs has type tuple(
real,) and rhs has type int
  $ ../../../../../install/default/bin/stanc onepl_type_missing_comma.stan
Syntax error in 'onepl_type_missing_comma.stan', line 2, column 12 to column 13, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real) y = (1,);
                     ^
     3:  }
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad.stan
Semantic error in 'tuple-dataonly-ad.stan', line 13, column 12 to column 19:
   -------------------------------------------------
    11:  
    12:  model {
    13:    target += foo(ps);
                     ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad2.stan
Semantic error in 'tuple-dataonly-ad2.stan', line 17, column 12 to column 24:
   -------------------------------------------------
    15:  
    16:  model {
    17:    target += foo((x1,x2));
                     ^
    18:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple_ternary.stan
Semantic error in 'tuple_ternary.stan', line 2, column 25 to column 47:
   -------------------------------------------------
     1:  transformed data {
     2:     tuple(real, real) x = 1 ? (1, 2) : (3, 4, 5);
                                  ^
     3:  }
   -------------------------------------------------

Type mismatch in ternary expression, expression when true is: tuple(int, int); expression when false is: tuple(
int, int, int)
